<resources>

    <string name="app_name">SimpleNetworkInfo</string>
    <string name="title_activity_main">Network Tools</string>
    <string name="button_send">Check Connection</string>
    <string name="title_activity_connection_request">Connection Status</string>
    <string name="connection_status_label">Status:</string>
    <string name="IP_out"></string>
    <string name="networkInfo_out"></string>
    <string name="ping_label">"Ping: "</string>
    <string name="ping_url">URL</string>
    <string name="ping_status_label">Status: </string>
    <string name="ping_status">Response \n Duration \n Status Code \n</string>
    <string name="ping_button">Ping!</string>
    <string name="menu_info">Info</string>
    <string name="menu_ping">Ping</string>
    <string name="menu_ports">Ports</string>
    <string name="menu_settings">Settings</string>
    <string name="text_networkinfo">NULL</string>
    <string name="status_code"></string>
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="et_portHint">www.example.com</string>
    <string name="et_begin_hint">Begin</string>
    <string name="et_end_hint">Final</string>

</resources>