<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/ping_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ping_label" />

    <EditText
        android:id="@+id/ping_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ping_url"
        android:inputType="textUri" />

    <Button
        android:id="@+id/ping_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="pingWrapper"
        android:text="@string/ping_button" />

    <TextView
        android:id="@+id/ping_status_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ping_status_label" />

    <TextView
        android:id="@+id/ping_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ping_status" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
    <TextView
        android:id="@+id/status_codes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_code" />
    </ScrollView>

</LinearLayout>