<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_portAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_portHint"
        android:imeOptions="actionDone"
        android:inputType="textWebEditText"
        android:singleLine="true" />

    <LinearLayout
        android:id="@+id/port_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="1"
            android:text="@string/btn_start" />

        <Button
            android:id="@+id/btn_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="1"
            android:text="@string/btn_stop" />

        <EditText
            android:id="@+id/et_beginPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="1"
            android:hint="@string/et_begin_hint"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_endPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="1"
            android:hint="@string/et_end_hint"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:singleLine="true" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/sv_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_portResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </ScrollView>

</LinearLayout>